feat: 退货单编辑接口与可退数量校验优化
退货单编辑：
- 新增 PUT /returns/{id} 编辑接口，DRAFT/SUBMITTED 可编辑
- 抽取 ReturnOrderBaseDto 公共基类，CreateDto 加 returnType，UpdateDto 加 version
- createDraft 加预计执行日期校验，不得早于当天
- 接口文档编辑接口 description/权限/日期校验同步更新

可退数量校验优化：
- 抽取 calculateAvailable 区分采购/销售退货：采购受库存限制，销售不受限
- loadStockAvailable 加 returnType 参数，销售退货跳过库存查询省 SQL
- buildReturnItems 错误提示增加明细：区分来源可退为0还是仓库库存不足
- listSourceItems/searchSourceOrders/buildReturnItems 三处统一用 calculateAvailable